--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -14,7 +14,7 @@
       "parent": {
         "scopes": ["addon_parent"],
         "script": "api.js",
-        "events": ["startup"],
+        "events": [],
         "paths": [["addonsSearchExperiment"]]
       }
     }
